# BaoYan-2019

./: .gitignore  CMakeLists.txt  README.md  template.cpp  保研分享.md  机试-算法与实现.md  机试技巧.md
2018年北京大学软件工程学科夏令营上机练习/: B.编码字符串.cpp  C.岛屿周长.cpp
Algorithm/BFS/: POJ3278.Catch That Cow.cpp
Algorithm/BinarySearch/: Aggressive cows.cpp
Algorithm/DFS/: 4103.踩方格.cpp  走迷宫.cpp  迷宫.cpp
Algorithm/DynamicProgramming/: 1088.滑雪.cpp  1163.TheTriangle.cpp  1481.MaximumSum.cpp  2755.神奇的口袋.cpp  HDU1024.MaxSumPlusPlus.cpp  LeetCode.97.InterleavingStrings.cpp  POJ3181Dollar_Dayz.cpp  最优二叉搜索树.cpp  课程大作业.cpp
Algorithm/GameTheory/: 1067.取石子游戏.cpp
Algorithm/Graph/: 3159.Candies.cpp  POJ3259.Wormholes.cpp  POJ3268.SilverCowParty.cpp
Algorithm/HighPrecision/: BigInteger.cpp  BigInteger.h  NOI.1.6.12.计算2的N次方.cpp  NOI.1.6.13.大整数的因子.cpp  NOI.1.6.14.求10000以内n的阶乘.cpp  NOI.1.6.15.阶乘和.cpp  NOI1.6.10.大整数加法.cpp  NOI1.6.11.大整数减法.cpp  POJ1220NumberBaseConversion.cpp  百练2738.实数加法.cpp
Algorithm/Math/: copy_and_submit.cpp  管管.cpp
Algorithm/Recursion/: 2746.约瑟夫问题.cpp
Algorithm/Simulation/: 3750.魔兽世界.cpp  874.WalkingRobotSimulation.cpp
Algorithm/Sort/: POJ2388_one_way.cpp  POJ2388_quick_select.cpp  POJ2388_three_pointers.cpp  POJ2388_two_ways.cpp  quicksort_double_way.cpp  quicksort_one_way.cpp  quicksort_three_pointers.cpp  quicksort_two_ways.cpp
Algorithm/Tree/: POJ1258.Agri-Net[Kruskal].cpp  POJ1258.Agri-Net[Prim].cpp  POJ3253.Fence Repair.cpp
Algorithm/Trie/: WYJ和渡边梨加.cpp
Algorithm/UnionFind/: POJ2492.A Bug's Life.cpp
CCF/201803/: 3.URL映射.cpp
Interview/: README.md  专业课.md  操作系统.md  数据结构与算法.md  机器学习.md  概率论与数理统计.md
Notes/: 算法笔记.md
PAT甲级/: 1002.A+BforPolynomials.cpp  1003.Emergency.cpp  1004.CountingLeaves.cpp  1005.SpellItRight.cpp  1006.SignInandSignOut.cpp  1008.Elevator.cpp  1009.ProductOfPolynomials.cpp  1010.Radix.cpp  1011.WorldCupBetting.cpp  1012.TheBestBank.cpp  1013.BattleOverCities.cpp  1014.WaitinginLine.cpp  1015.ReversiblePrimes.cpp  1016.PhoneBills.cpp  1019.GeneralPalindromicNumber.cpp  1020.TreeTraversals.cpp  1021.DeepestRoot.cpp  1022.DigitalLibrary.cpp  1023.HaveFunWithNumbers.cpp  1024.PalindromicNumber.cpp  1025.PATRanking.cpp  1026.TableTennis.cpp  1027.ColorsinMars.cpp  1028.ListSorting.cpp  1029.Median.cpp  1030.TravelPlan.cpp  1031.HelloWorldForU.cpp  1032.Sharing.cpp  1033.ToFillorNottoFill.cpp  1034.HeadOfAGang.cpp  1048.FindCoins.cpp  1099.BuildABinarySearchTree.cpp  1101.QuickSort.cpp  1102.InvertABinaryTree.cpp  1103.IntegerFactorization.cpp  1104.SumofNumberSegments.cpp  1105.SpiralMatrix.cpp  1108.FindingAverage.cpp  1110.CompleteBinaryTree.cpp  1111.OnlineMap.cpp  (+47 more)
Part2.SimulationPractice/: 模拟练习.md
Part2.SimulationPractice/2018年北京大学软件工程学科夏令营上机练习/: A.判决素数个数【埃式筛法】.cpp  E.怪盗基德的滑翔翼［最长上升子序列］.cpp
Part2.SimulationPractice/2018计算机学科夏令营上机考试/: A.计算两个日期之间的天数.cpp  F.Tram [Dijkstra].cpp  F.Tram [Floyd].cpp
Part2.SimulationPractice/王道论坛计算机考研机试指南/: 2.5统计同成绩学生人数【Hash】.cpp  2.6Sort【Hash】.cpp  3.2简单计算器.cpp  4.6素数判定.cpp  6.1百鸡问题【搜索】.cpp
Part3.SimulationPractice/2018年北京大学软件工程学科夏令营上机练习/: A.判决素数个数【埃式筛法】.cpp  E.怪盗基德的滑翔翼.cpp
Part3.SimulationPractice/王道论坛计算机考研机试指南/: 2.3日期差值.cpp  3.4二叉树遍历.cpp  4.10人见人爱【快速幂】.cpp  4.2又一版A+B【进制转换】.cpp  4.5最大公约数【非递归】.cpp  5.3还是畅通工程【最小生成树Kruskal】.cpp  5.4Freckles【最小生成树Kruskal】.cpp  7.3拦截导弹【最长递增子序列LIS】.cpp  7.4Coincidence【最长公共子序列LCS】.cpp
Simulation/: 模拟练习.md
Simulation/2016计算机学科夏令营上机考试/: G.重建二叉树[已知前序中序求后序].cpp
Simulation/2017北京大学大数据研究中心夏令营上机考试/: POJ3669.Meteor Shower.cpp
Simulation/2017计算机学科夏令营上机考前练习/: B.单词翻转.cpp
Simulation/2018北京大学计算机学科夏令营上机考试/: A.计算两个日期之间的天数.cpp  B.回文子串.cpp  E.重要逆序对.cpp  F.Tram [Dijkstra].cpp  F.Tram [Floyd].cpp  G.食物链.cpp
Simulation/2018南京大学计算机系夏令营/: 2.MissingNumbers.cpp
Simulation/2018年北京大学软件工程学科夏令营上机练习/: A.判决素数个数【埃式筛法】.cpp  B.编码字符串.cpp  C.岛屿周长.cpp  D.Safecracker.cpp  E.怪盗基德的滑翔翼［最长上升子序列］.cpp  G.实现堆结构.cpp
Simulation/2018清华计算机九推/: 过去的项链.cpp
Simulation/2018清华软院九推/: 大整数运算.cpp
Simulation/2018清华软院夏令营/: 1.回文数.cpp  2.上凸函数.cpp  3.质因子.cpp
Simulation/2018研究生推免上机考试/: A.区间内的真素数.cpp  B.简单密码.cpp  E.热血格斗场.cpp
Simulation/2018计算机学科夏令营上机考试/: B.回文子串.cpp  F.Tram [Dijkstra].cpp  F.Tram [Floyd].cpp  G.食物链.cpp
Simulation/2019信科研究生上机测试/: A.护林员盖房子.cpp  B.方便记忆的电话号码.cpp
Simulation/PAT甲级/: 1001.A+BFormat.cpp  1007.MaximumSubsequenceSum.cpp  1013.BattleOverCities.cpp  1103.IntegerFactorization.cpp
Simulation/王道论坛计算机考研机试指南/: 2.11FatMouse'Trade【贪心】.cpp  2.12今年暑假不AC【非重叠区间】.cpp  2.1排序【冒泡排序】.cpp  2.2成绩排序【自定义比较函数】.cpp  2.5统计同成绩学生人数【Hash】.cpp  2.6Sort【Hash】.cpp  2.7输出梯形【排版】.cpp  2.8叠筐【排版】.cpp  3.1括号匹配问题【栈的应用】.cpp  3.2简单计算器.cpp  3.4二叉树遍历.cpp  3.5二叉排序树.cpp  4.10人见人爱【快速幂】.cpp  4.2又一版A+B【进制转换】.cpp  4.3数制转换【进制转换】.cpp  4.5最大公约数【递归】.cpp  4.5最大公约数【非递归】.cpp  4.5最小公倍数.cpp  4.6素数判定.cpp  4.7素数【筛法】.cpp  4.8质因数的个数.cpp  5.1畅通工程【连通分量数】.cpp  5.2More_is_better【最大分量顶点数】.cpp  5.3还是畅通工程【最小生成树Kruskal】.cpp  5.4Freckles【最小生成树Kruskal】.cpp  5.6最短路【Dijkstra】.cpp  5.7LeagalorNot【拓扑排序】.cpp  6.2胜利大逃亡【3DBFS】.cpp  7.1N阶楼梯上楼问题【动态规划】.cpp  7.2不容易系列之一【错排问题】.cpp  7.3拦截导弹【最长递增子序列LIS】.cpp  7.4Coincidence【最长公共子序列LCS】.cpp
力扣中级算法/动态规划/: 零钱兑换.cpp
力扣中级算法/回溯算法/: 子集.回溯.cpp  电话号码的字母组合.cpp
力扣中级算法/树和图/: 二叉树的锯齿形层次遍历.cpp  填充每个节点的下一个右侧节点指针.cpp
力扣初级算法/二叉树/: 二叉树的最大深度.递归.cpp
力扣初级算法/动态规划/: 最大子序和.cpp
力扣初级算法/字符串/: 反转字符串.cpp  实现 strStr().cpp  最长公共前缀.cpp
力扣初级算法/数学/: 3的幂.cpp
力扣初级算法/数组/: 从排序数组中删除重复项.cpp  加一.cpp  只出现一次的数字.cpp  旋转图像.cpp  有效的数独.cpp
力扣初级算法/链表/: 反转链表.cpp  回文链表.cpp
洛谷/: P1352.没有上司的舞会.cpp
洛谷/交叉模拟/: P1031.均分纸牌.cpp  小结.md
洛谷/动态规划的背包问题/: P1048采药.cpp  P1616疯狂的采药.cpp  小结.md
洛谷/多维动态规划/: P1387.最大正方形.cpp
洛谷/广度优先搜索/: P1162.填涂颜色.cpp
洛谷/排序/: P1059.明明的随机数.cpp  小结.md
洛谷/普及常见模板/: P3366.最小生成树.cpp  P3367.并查集.cpp  (+4 more)
王道论坛计算机考研机试指南/: 2.10查找学生信息【二分查找】.cpp  2.11FatMouse'Trade【贪心】.cpp  2.12今年暑假不AC【非重叠区间】.cpp  2.1排序【冒泡排序】.cpp  2.1排序【自定义比较函数】.cpp  2.2成绩排序【自定义比较函数】.cpp  2.2成绩排序【重载运算符】.cpp  2.4Day_of_week.cpp  2.5统计同成绩学生人数【Hash】.cpp  2.6Sort【Hash】.cpp  2.7输出梯形【排版】.cpp  2.9找x【线性查找】.cpp  3.1括号匹配问题【栈的应用】.cpp  3.3哈夫曼树【优先级队列】.cpp  3.5二叉排序树.cpp  4.3数制转换【进制转换】.cpp  4.5最大公约数【递归】.cpp  4.7素数【筛法】.cpp  5.1畅通工程【连通分量数】.cpp  5.5最短路【Floyd】.cpp  5.7LeagalorNot【拓扑排序】.cpp  7.2不容易系列之一【错排问题】.cpp
(+97 files in other folders)
