cmake_minimum_required(VERSION 3.13)
project(BaoYan)

set(CMAKE_CXX_STANDARD 98)

add_executable(noi1.6.08 Simulation/NOI/1.6一维数组/8.石头剪刀布.cpp)
add_executable(noi2.5.666 Simulation/NOI/2.5搜索/666.放苹果.cpp)
add_executable(noi2.5.917 Simulation/NOI/2.5搜索/917.KnightMoves.cpp)
add_executable(noi2.6.9290 Simulation/NOI/2.6动态规划/9290.Pku2680_Computer_Transformation.cpp)
add_executable(noi3.7.2726 Simulation/NOI/3.7数据结构之堆/2726.集合问题.cpp)
add_executable(noi3.9.1806 Simulation/NOI/3.9C++STL/1806.词典.cpp)

add_executable(wangdao3.1 Simulation/王道论坛计算机考研机试指南/3.1括号匹配问题【栈的应用】.cpp)
add_executable(wangdao3.2 Simulation/王道论坛计算机考研机试指南/3.2简单计算器.cpp)
add_executable(wangdao3.5 Simulation/王道论坛计算机考研机试指南/3.5二叉排序树.cpp)
add_executable(wangdao4.2 Simulation/王道论坛计算机考研机试指南/4.2又一版A+B【进制转换】.cpp)
add_executable(wangdao4.5.3 Simulation/王道论坛计算机考研机试指南/4.5最小公倍数.cpp)
add_executable(wangdao4.8 Simulation/王道论坛计算机考研机试指南/4.8质因数的个数.cpp)
add_executable(wangdao5.1 Simulation/王道论坛计算机考研机试指南/5.1畅通工程【连通分量数】.cpp)
add_executable(wangdao5.2 Simulation/王道论坛计算机考研机试指南/5.2More_is_better【最大分量顶点数】.cpp)
add_executable(wangdao7.2 Simulation/王道论坛计算机考研机试指南/7.2不容易系列之一【错排问题】.cpp)

add_executable(quicksort_one_way Algorithm/Sort/quicksort_one_way.cpp)
add_executable(quicksort_two_ways Algorithm/Sort/quicksort_two_ways.cpp)
add_executable(POJ2388_one_way Algorithm/Sort/POJ2388_one_way.cpp)
add_executable(POJ2388_two_ways Algorithm/Sort/POJ2388_two_ways.cpp)
add_executable(POJ2388_three_pointers Algorithm/Sort/POJ2388_three_pointers.cpp)
add_executable(POJ3181 Algorithm/DynamicProgramming/POJ3181Dollar_Dayz.cpp)

add_executable(2018thu.se.1.3 Simulation/2018清华软院夏令营/1.回文数.cpp)
add_executable(2018thu.se.2.1_2 Simulation/2018清华软院九推/大整数运算.cpp)
add_executable(2018thu.se.2.3 Simulation/2018清华软院九推/同构数.cpp)

add_executable(2018pku.se.a Simulation/2018年北京大学软件工程学科夏令营上机练习/A.判决素数个数【埃式筛法】.cpp)
add_executable(2018pku.se.b Simulation/2018年北京大学软件工程学科夏令营上机练习/B.编码字符串.cpp)
add_executable(2018pku.se.d Simulation/2018年北京大学软件工程学科夏令营上机练习/D.Safecracker.cpp)
add_executable(2018pku.se.e Simulation/2018年北京大学软件工程学科夏令营上机练习/E.怪盗基德的滑翔翼［最长上升子序列］.cpp)
add_executable(2018pku.se.g Simulation/2018年北京大学软件工程学科夏令营上机练习/G.实现堆结构.cpp)

add_executable(2018pku.cs.a Simulation/2018计算机学科夏令营上机考试/A.计算两个日期之间的天数.cpp)
add_executable(2018pku.cs.b Simulation/2018计算机学科夏令营上机考试/B.回文子串.cpp)
add_executable(2018pku.cs.f.1 "Simulation/2018计算机学科夏令营上机考试/F.Tram [Dijkstra].cpp")
add_executable(2018pku.cs.f.2 "Simulation/2018计算机学科夏令营上机考试/F.Tram [Floyd].cpp")
add_executable(2018pku.cs.g "Simulation/2018计算机学科夏令营上机考试/G.食物链.cpp")

