cmake_minimum_required(VERSION 3.13)
project(BaoYan)

set(CMAKE_CXX_STANDARD 98) # C++ 98 should be used in algorithm examinations

add_executable(CCF20181201 CCF/201812/1.小明上学.cpp)
add_executable(CCF20180303 CCF/201803/3.URL映射.cpp)
add_executable(CCF20180302 CCF/201803/2.碰撞的小球.cpp)

add_executable(simulation_1 Algorithm/Simulation/3750.魔兽世界.cpp)
add_executable(simulation_2 Algorithm/Simulation/874.WalkingRobotSimulation.cpp)
add_executable(dp_2 Algorithm/DynamicProgramming/最优二叉搜索树.cpp)
add_executable(dp_3 Algorithm/DynamicProgramming/1481.MaximumSum.cpp)
add_executable(dp_4 Algorithm/DynamicProgramming/HDU1024.MaxSumPlusPlus.cpp)
add_executable(dp_5 Algorithm/DynamicProgramming/1088.滑雪.cpp)
add_executable(high_precision_1 Algorithm/HighPrecision/百练2738.实数加法.cpp)
add_executable(high_precision_2 Algorithm/HighPrecision/NOI.1.6.14.求10000以内n的阶乘.cpp)
add_executable(high_precision_3 Algorithm/HighPrecision/BigInteger.cpp Algorithm/HighPrecision/BigInteger.h)
add_executable(high_precision_4 Algorithm/HighPrecision/POJ1220NumberBaseConversion.cpp)
add_executable(dfs_1 Algorithm/DFS/迷宫.cpp)
add_executable(tree1 Algorithm/Tree/POJ1258.Agri-Net[Kruskal].cpp)
add_executable(graph1 Algorithm/Graph/3159.Candies.cpp)
add_executable(graph2 Algorithm/Graph/POJ3259.Wormholes.cpp)

add_executable(trie.1 Algorithm/Trie/WYJ和渡边梨加.cpp)
add_executable(math.1 Algorithm/Math/copy_and_submit.cpp)
add_executable(math.2 Algorithm/Math/管管.cpp)

add_executable(noi1.6.08 Simulation/NOI/1.6一维数组/8.石头剪刀布.cpp)
add_executable(noi1.7.19 Simulation/NOI/1.7字符串/字符串移位包含问题.cpp)
add_executable(noi2.5.666 Simulation/NOI/2.5搜索/666.放苹果.cpp)
add_executable(noi2.5.917 Simulation/NOI/2.5搜索/917.KnightMoves.cpp)
add_executable(noi2.5.1789 Simulation/NOI/2.5搜索/1789.算24.cpp)
add_executable(noi2.6.9290 Simulation/NOI/2.6动态规划/9290.Pku2680_Computer_Transformation.cpp)
add_executable(noi2.6.1808 Simulation/NOI/2.6动态规划/1808.公共子序列.cpp)
add_executable(noi2.6.4982 Simulation/NOI/2.6动态规划/4982.踩方格.cpp)
add_executable(noi2.6.1944 Simulation/NOI/2.6动态规划/1944.吃糖果.cpp)
add_executable(noi2.6.1775 Simulation/NOI/2.6动态规划/1775.采药.cpp)
add_executable(noi2.6.4152 Simulation/NOI/2.6动态规划/4152.最佳加法表达式.cpp)
add_executable(noi3.7.2726 Simulation/NOI/3.7数据结构之堆/2726.集合问题.cpp)
add_executable(noi3.9.1806 Simulation/NOI/3.9C++STL/1806.词典.cpp)
add_executable(noi3.9.3345 Simulation/NOI/3.9C++STL/3345.priority_queue练习题.cpp)

add_executable(wangdao2.8 Simulation/王道论坛计算机考研机试指南/2.8叠筐【排版】.cpp)
add_executable(wangdao3.1 Simulation/王道论坛计算机考研机试指南/3.1括号匹配问题【栈的应用】.cpp)
add_executable(wangdao3.2 Simulation/王道论坛计算机考研机试指南/3.2简单计算器.cpp)
add_executable(wangdao3.5 Simulation/王道论坛计算机考研机试指南/3.5二叉排序树.cpp)
add_executable(wangdao4.2 Simulation/王道论坛计算机考研机试指南/4.2又一版A+B【进制转换】.cpp)
add_executable(wangdao4.5.3 Simulation/王道论坛计算机考研机试指南/4.5最小公倍数.cpp)
add_executable(wangdao4.8 Simulation/王道论坛计算机考研机试指南/4.8质因数的个数.cpp)
add_executable(wangdao5.1 Simulation/王道论坛计算机考研机试指南/5.1畅通工程【连通分量数】.cpp)
add_executable(wangdao5.2 Simulation/王道论坛计算机考研机试指南/5.2More_is_better【最大分量顶点数】.cpp)
add_executable(wangdao7.2 Simulation/王道论坛计算机考研机试指南/7.2不容易系列之一【错排问题】.cpp)

add_executable(quicksort_one_way Algorithm/Sort/quicksort_one_way.cpp)
add_executable(quicksort_two_ways Algorithm/Sort/quicksort_two_ways.cpp)
add_executable(POJ2388_quick_select Algorithm/Sort/POJ2388_quick_select.cpp)
add_executable(POJ2388_one_way Algorithm/Sort/POJ2388_one_way.cpp)
add_executable(POJ2388_two_ways Algorithm/Sort/POJ2388_two_ways.cpp)
add_executable(POJ2388_three_pointers Algorithm/Sort/POJ2388_three_pointers.cpp)
add_executable(POJ3181 Algorithm/DynamicProgramming/POJ3181Dollar_Dayz.cpp)

add_executable(2018thu.se.1.1 Simulation/2018清华软院夏令营/1.回文数.cpp)
add_executable(2018thu.se.1.2 Simulation/2018清华软院夏令营/2.上凸函数.cpp)
add_executable(2018thu.se.1.3 Simulation/2018清华软院夏令营/3.质因子.cpp)
add_executable(2018thu.se.2.1_2 Simulation/2018清华软院九推/大整数运算.cpp)

add_executable(2018thu.cs.a Simulation/2018清华计算机上机练习/A/思考熊的马拉松.cpp)

add_executable(2018pku.se.a Simulation/2018年北京大学软件工程学科夏令营上机练习/A.判决素数个数【埃式筛法】.cpp)
add_executable(2018pku.se.b Simulation/2018年北京大学软件工程学科夏令营上机练习/B.编码字符串.cpp)
add_executable(2018pku.se.d Simulation/2018年北京大学软件工程学科夏令营上机练习/D.Safecracker.cpp)
add_executable(2018pku.se.e Simulation/2018年北京大学软件工程学科夏令营上机练习/E.怪盗基德的滑翔翼［最长上升子序列］.cpp)
add_executable(2018pku.se.g Simulation/2018年北京大学软件工程学科夏令营上机练习/G.实现堆结构.cpp)

add_executable(2016pku.cs1.g Simulation/2016计算机学科夏令营上机考试/G.重建二叉树[已知前序中序求后序].cpp CCF/201812/1.小明上学.cpp CCF/201803/3.URL映射.cpp)

add_executable(2018pku.cs.a Simulation/2018北京大学计算机学科夏令营上机考试/A.计算两个日期之间的天数.cpp)
add_executable(2018pku.cs.b Simulation/2018北京大学计算机学科夏令营上机考试/B.回文子串.cpp)
add_executable(2018pku.cs.e "Simulation/2018北京大学计算机学科夏令营上机考试/E.重要逆序对.cpp")
add_executable(2018pku.cs.f.1 "Simulation/2018北京大学计算机学科夏令营上机考试/F.Tram [Dijkstra].cpp")
add_executable(2018pku.cs.f.2 "Simulation/2018北京大学计算机学科夏令营上机考试/F.Tram [Floyd].cpp")
add_executable(2018pku.cs.g "Simulation/2018北京大学计算机学科夏令营上机考试/G.食物链.cpp")

add_executable(2019pku.kaoyan.a Simulation/2019信科研究生上机测试/A.护林员盖房子.cpp)

add_executable(2018pku.tuimian.b "Simulation/2018研究生推免上机考试/B.简单密码.cpp")

add_executable(2018nju.cs.2 Simulation/2018南京大学计算机系夏令营/2.MissingNumbers.cpp)

add_executable(pat1001 PAT甲级/1001.A+BFormat.cpp)
add_executable(pat1002 PAT甲级/1002.A+BforPolynomials.cpp)
add_executable(pat1003 PAT甲级/1003.Emergency.cpp)
add_executable(pat1004 PAT甲级/1004.CountingLeaves.cpp)
add_executable(pat1005 PAT甲级/1005.SpellItRight.cpp)
add_executable(pat1006 PAT甲级/1006.SignInandSignOut.cpp)
add_executable(pat1007 PAT甲级/1007.MaximumSubsequenceSum.cpp)
add_executable(pat1008 PAT甲级/1008.Elevator.cpp)
add_executable(pat1009 PAT甲级/1009.ProductOfPolynomials.cpp)
add_executable(pat1010 PAT甲级/1010.Radix.cpp)
add_executable(pat1011 PAT甲级/1011.WorldCupBetting.cpp)
add_executable(pat1012 PAT甲级/1012.TheBestBank.cpp)
add_executable(pat1013 PAT甲级/1013.BattleOverCities.cpp)
add_executable(pat1014 PAT甲级/1014.WaitinginLine.cpp)
add_executable(pat1015 PAT甲级/1015.ReversiblePrimes.cpp)
add_executable(pat1016 PAT甲级/1016.PhoneBills.cpp)
add_executable(pat1022 PAT甲级/1022.DigitalLibrary.cpp)
add_executable(pat1048 PAT甲级/1048.FindCoins.cpp)
add_executable(pat1103 PAT甲级/1103.IntegerFactorization.cpp)

add_executable(luogu.p1339 洛谷/最短路问题/P1339[USACO09OCT]热浪HeatWave.cpp)
add_executable(luogu.p1060 洛谷/动态规划的背包问题/P1060开心的金明.cpp)
add_executable(luogu.p1164 洛谷/动态规划的背包问题/P1164小A点菜.cpp)
add_executable(luogu.p1064 洛谷/动态规划的背包问题/P1064金明的预算方案.cpp)
add_executable(luogu.p1048 洛谷/动态规划的背包问题/P1048采药.cpp)
add_executable(luogu.p1049 洛谷/动态规划的背包问题/P1049装箱问题.cpp)
add_executable(luogu.p1616 洛谷/动态规划的背包问题/P1616疯狂的采药.cpp)
add_executable(luogu.p1020 洛谷/线性动态规划/P1020导弹拦截.cpp)
add_executable(luogu.p1091 洛谷/线性动态规划/P1091合唱队形.cpp)
add_executable(luogu.p1280 洛谷/线性动态规划/P1280尼克的任务.cpp)
add_executable(luogu.p1880 洛谷/线性动态规划/P1880石子合并.cpp)
add_executable(luogu.p1104 洛谷/线性动态规划/P1104相似基因.cpp)
add_executable(luogu.p1192 洛谷/递推与递归二分/P1192台阶问题.cpp)
add_executable(luogu.p1025 洛谷/递推与递归二分/P1025数的二分.cpp)
add_executable(luogu.p1057 洛谷/递推与递归二分/P1057传球游戏.cpp)
